# Flow

./: .gitignore  CLAUDE.md  PLAN.md  README.md  backlog.json  flow_skill.py  planv2.md  planv3.md  planv4.md  test_flow_live.py
.claude/: launch.json
.claude-plugin/: plugin.json
.claude/agents/: backend-dev.md  frontend-dev.md  lead-dev.md  qa.md  reviewer.md
backlog-manager/: SKILL.md
backlog-manager-workspace/iteration-1/: benchmark.json
backlog-manager/assets/: backlog-board.html
skills/backlog-manager/: CLAUDE.md  REFERENCE.md  SKILL.md  pyproject.toml
skills/backlog-manager/assets/: backlog-board.html
skills/backlog-manager/backlog/: __init__.py  cli.py  core.py  exceptions.py  server.py
skills/backlog-manager/evals/: conftest.py  context_slicer.py  eval_flow_skill.py  evals.json  requirements.txt  test_cli.py  test_flow_live.py  validate_fixtures.py
skills/backlog-manager/evals/files/: backlog_with_items.json  backlog_with_ready.json  backlog_with_scores.json
skills/backlog-manager/evals/results/: test_results_20260328_150911.txt  test_results_20260328_152735.txt  test_results_20260328_154755.txt  test_results_20260328_163343.txt  test_results_20260328_165131.txt  test_results_20260329_233059.txt  test_results_20260330_183410.txt  test_results_full.txt  test_results_summary.md
skills/backlog-manager/references/: schema.md
skills/backlog-manager/scripts/: backlog_server.py
stress-tests/: backlog_stress_2000.json  backlog_stress_300.json  backlog_stress_500.json  critical_path_fixture.json  tribunal_ties_fixture.json
(+40 files in other folders)
