[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backlog-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "flask>=3.0",
    "rich>=13.0",
]

[project.scripts]
backlog = "backlog.cli:main"
backlog-server = "backlog.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backlog*"]

[tool.setuptools.package-data]
backlog = ["assets/*.html"]

[tool.pytest.ini_options]
pythonpath = ["."]
